# kmer_counter

./: Makefile  README.md  duties.py  kmer_counter.py  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
config/: coverage.ini
docs/reference/: cli.md
scripts/: make_test_data.sh  multirun.sh
src/kmer_counter/: __init__.py  __main__.py  cli.py  counters.py  pick_indel.py  readers.py  utils.py
tests/: __init__.py  test_cli.py  test_utils.py
tests/data/: bg_test.bed  pos_test.txt  test.2bit
